<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_auto"
            android:icon="@drawable/ic_wallpaper"
            android:title="@string/menu_auto" />
        <item
            android:id="@+id/nav_favotite"
            android:icon="@drawable/ic_favorite_done"
            android:title="@string/menu_favorite" />
        <item
            android:id="@+id/nav_rate"
            android:icon="@drawable/ic_rate1"
            android:title="@string/menu_rate" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_share1"
            android:title="@string/menu_share" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_contact"
            android:title="@string/menu_contact" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info1"
            android:title="@string/menu_about" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_setting"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_night"
            android:icon="@drawable/ic_nightmode"
            android:title="@string/menu_night"
            app:actionViewClass="androidx.appcompat.widget.SwitchCompat"/>
    </group>
</menu>