<?xml version="1.0" encoding="utf-8" ?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:background="@android:color/transparent"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20.0dip"
        app:cardBackgroundColor="@color/bgMain"
        app:cardCornerRadius="5.0dip">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="15.0dip"
            android:layout_marginRight="15.0dip">

            <TextView
                android:textAppearance="?android:textAppearanceMedium"
                android:textStyle="bold"
                android:textColor="@color/MainText"
                android:gravity="start"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5.0dip"
                android:layout_marginTop="10.0dip"
                android:layout_marginRight="5.0dip"
                android:text="@string/terms_amp_condition"
                android:textAllCaps="true" />

            <TextView
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/MainText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5.0dip"
                android:layout_marginTop="15.0dip"
                android:layout_marginRight="5.0dip"
                android:text="@string/needed_access"
                android:lineSpacingExtra="4.0dip" />

            <TextView
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/MainText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5.0dip"
                android:layout_marginTop="20.0dip"
                android:layout_marginRight="5.0dip"
                android:text="@string/media_and_storage" />

            <TextView
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/MainText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5.0dip"
                android:layout_marginTop="10.0dip"
                android:layout_marginRight="5.0dip"
                android:text="@string/access_download_videos"
                android:lineSpacingExtra="4.0dip" />

            <TextView
                android:textSize="12.0sp"
                android:textColor="@color/MainText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5.0dip"
                android:layout_marginTop="10.0dip"
                android:layout_marginRight="5.0dip"
                android:text="@string/permission_use_text"
                android:lineSpacingExtra="4.0dip" />

            <View android:background="#ffcccccc"
                android:layout_width="fill_parent"
                android:layout_height="1.0dip"
                android:layout_marginTop="20.0dip" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="40.0dip"
                android:layout_marginBottom="5.0dip">

                <TextView
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@color/MainText"
                    android:gravity="center"
                    android:id="@+id/tv_policy_decline"
                    android:padding="10.0dip"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="10.0dip"
                    android:layout_marginRight="10.0dip"
                    android:text="@string/tv_decline_policy"
                    android:layout_weight="1.0"
                    android:textAllCaps="true" />

                <View android:background="#ffcccccc"
                    android:layout_width="1.0dip"
                    android:layout_height="fill_parent"
                    android:layout_marginTop="10.0dip"
                    android:layout_marginBottom="10.0dip" />

                <TextView
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textStyle="bold"
                    android:textColor="@color/purple_500"
                    android:gravity="center"
                    android:id="@+id/tv_give_per_dialog"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="10.0dip"
                    android:layout_marginRight="10.0dip"
                    android:text="@string/cv_accept_policy"
                    android:layout_weight="1.0"
                    android:textAllCaps="true" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
